--- a/rjb/ruoyi-admin/src/main/resources/application.yml
+++ b/rjb/ruoyi-admin/src/main/resources/application.yml
@@ -46,7 +46,8 @@ user:
 # Spring配置
 spring:
   #开启权限
-  resources: classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, classpath:/templates/
+  resources:
+    static-locations: classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, classpath:/templates/
   # 模板引擎
   thymeleaf:
     mode: HTML
@@ -82,7 +83,7 @@ mybatis:
     typeAliasesPackage: com.ruoyi.**.domain
     # 配置mapper的扫描，找到所有的mapper.xml映射文件
     mapperLocations: classpath*:mapper/**/*Mapper.xml
-     #加载全局的配置文件
+  #加载全局的配置文件
     configLocation: classpath:mybatis/mybatis-config.xml
 
 # PageHelper分页插件
