解决了若依mybatis框架问题，整合了部分xml文件中部分sql函数与dm的冲突问题，下一步将数据治理部分的demo整合到若依框架里

--- a/rjb/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/rjb/ruoyi-admin/src/main/resources/application-druid.yml
@@ -7,7 +7,7 @@ spring:
             # 主库数据源
             master:
                 url: jdbc:dm://localhost:5236
-                username: RJB
+                username: RJBR
                 password: '123456'
             # 从库数据源
             slave:
