治理模块大体整完，只需再录入user表

--- a/rjb/ruoyi-admin/src/main/resources/application.yml
+++ b/rjb/ruoyi-admin/src/main/resources/application.yml
@@ -87,10 +87,11 @@ mybatis:
     configLocation: classpath:mybatis/mybatis-config.xml
 
 # PageHelper分页插件
-#pagehelper:
-#  helperDialect: mysql
-#  supportMethodsArguments: true
-#  params: count=countSql
+pagehelper:
+  helperDialect: oracle
+  supportMethodsArguments: true
+  params: count=countSql
+
 
 # Shiro
 shiro:
