--- a/RuoYi-Vue3-master/package.json
+++ b/RuoYi-Vue3-master/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ruoyi",
   "version": "3.8.5",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "达梦物流管理系统",
+  "author": "123",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
